--- a/style.css
+++ b/style.css
@@ -1,56 +1,47 @@
 * {
-    font-family: 'Open Sans', sans-serif;;
-  color: #bcaaa4 
-  }
-  
-  
-  body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-  }
-  
-  main {
-    flex: 1 0 auto;
-  }
-  
-  img {
-      max-width:400px;
-      max-height:400px;
-  }
-  
-  header {
-      background:#efebe9;
-      text-align: center;
-      height:20vh;
-      justify-content: space-between;
-      padding:0 100px;
-      margin-bottom:0;
-      border-bottom:5px solid #bcaaa4;
-      display: flex;
-      flex-direction: row;
-  }
-  
-    ul {
-      margin: 2.5rem auto;
-      font-size: 1.5rem;
-      padding: 0;
-      list-style-type: none;
-    }
-    
-    ul li {
-      margin: 1.2rem 0;
-    }
-    
-    footer {
-      color:#bcaaa4;
-      border-top:5px solid #efebe9;
-      
-    }
-  
-   
-  
-  
-  
-  
-   
+  font-family: "Open Sans", sans-serif;
+  color: #bcaaa4;
+}
+
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
+}
+
+img {
+  max-width: 400px;
+  max-height: 400px;
+}
+
+header {
+  background: #efebe9;
+  text-align: center;
+  height: 20vh;
+  justify-content: space-between;
+  padding: 0 100px;
+  margin-bottom: 0;
+  border-bottom: 5px solid #bcaaa4;
+  display: flex;
+  flex-direction: row;
+}
+
+ul {
+  margin: 2.5rem auto;
+  font-size: 1.5rem;
+  padding: 0;
+  list-style-type: none;
+}
+
+ul li {
+  margin: 1.2rem 0;
+}
+
+footer {
+  color: #bcaaa4;
+  border-top: 5px solid #efebe9;
+}
