--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 * {
+  margin: 10px;
   font-family: "Open Sans", sans-serif;
-  color: #bcaaa4;
+ 
+}
+h4{
+  justify-content: center;
 }
 
 body {
@@ -14,22 +18,42 @@ main {
 }
 
 img {
-  max-width: 400px;
-  max-height: 400px;
+  max-width: 200px;
+  max-height: 200px;
 }
 
 header {
-  background: #efebe9;
+  margin-top: 0;
+  background: #caedf4;
   text-align: center;
-  height: 20vh;
+  height: 15vh;
   justify-content: space-between;
   padding: 0 100px;
   margin-bottom: 0;
   border-bottom: 5px solid #bcaaa4;
   display: flex;
   flex-direction: row;
+  border-radius: 10px;
+  color: rgb(55, 53, 53);
 }
+/* #video{
+  display: block;
+  border: black;
+  background: blue; */
 
+  
+
+.row1{
+  float: right;
+  
+  border: black;
+  background: blue;
+  
+}
+.row2{
+  float: left;
+  
+}
 ul {
   margin: 2.5rem auto;
   font-size: 1.5rem;
