--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 10px;
   font-family: "Open Sans", sans-serif;
@@ -15,13 +14,13 @@ body {
 }
 
 main {
-  flex: 1 0 auto;
+  flex: 1 0 auto; 
 }
 
 img {
 
-  max-width: 200px;
-  max-height: 200px;
+  max-width: 50px;
+  max-height: 50px;
 
 }
 
@@ -38,37 +37,58 @@ header {
   flex-direction: row;
   border-radius: 10px;
   color: rgb(55, 53, 53);
-}
-/* #video{
+} 
+#video{
   display: block;
   border: black;
-  background: blue; */
+  background: blue; 
 
-  
+}
 
-.row1{
+.row1
+{
   float: right;
-  
   border: black;
-  background: blue;
-  
+  display: block;
+  border:black;
+  height: 500px;
+  width:45%;
+  flex-wrap: wrap; 
 }
 .row2{
   float: left;
-  
+  display: block;
+  border: black;
+  height: 500px;
+  width: 45%;
+  flex-wrap: wrap; 
 }
-ul {
+#recipe-list ul {
   margin: 2.5rem auto;
   font-size: 1.5rem;
   padding: 0;
   list-style-type: none;
 }
+/* ul {
+  margin: 2.5rem auto;
+  font-size: 1.5rem;
+  padding: 0;
+  list-style-type: none; */
+/* } */
 
 ul li {
   margin: 1.2rem 0;
 }
 
 footer {
-  color: #bcaaa4;
-  border-top: 5px solid #efebe9;
-}
+  /* display: flex; */
+  position:bottom;
+   color: #BCAAA4;
+  border-top: 5px solid #EFEBE9;
+  /* display: inline; */
+  width: 100;
+  min-height: min-content;
+
+   
+
+} 
