--- a/style.css
+++ b/style.css
@@ -2,7 +2,53 @@
 * {
   margin: 10px;
   font-family: "Open Sans", sans-serif; 
+
 }
+.card-title{
+  font-family: Georgia, serif;
+font-size: 19px;
+letter-spacing: 2px;
+word-spacing: 2px;
+color: #000000;
+font-weight: 700;
+text-decoration: underline solid rgb(68, 68, 68);
+font-style: italic;
+font-variant: normal;
+text-transform: none;
+}
+#save{
+  background-color: #7BA487;
+  color: #FFFFFF;
+background: #996D6D;
+font-family: Georgia, serif;
+font-size: 25px;
+letter-spacing: 2px;
+word-spacing: 2px;
+color: #000000;
+font-weight: 400;
+text-decoration: underline solid rgb(68, 68, 68);
+font-style: italic;
+font-variant: normal;
+text-transform: none;
+
+
+
+
+}
+h1
+{
+  color: #FFFFFF;
+/* background: rgb(223, 40, 162); */
+text-shadow: 0 0 10px #FFFFFF;}
+.middle{
+  /* border: dotted; */
+  text-shadow: 2px 2px 0px #FFFFFF, 5px 4px 0px rgba(0,0,0,0.15), 2px 2px 2px rgba(206,89,55,0);
+}
+
+#ingredient-input{
+  background-color: #FFFFFF;
+}
+
 
 h4 {
   justify-content: center;
@@ -19,13 +65,8 @@ main {
 }
 
 
-#img {
-display: contents;
-  max-width: 100px;
-  max-height: 100px;
-
-  
-
+h3{
+  text-align: center;
 
 }
 
@@ -33,8 +74,8 @@ header {
   margin-top: 0;
   background: #caedf4;
   text-align: center;
-  height: 15vh;
-  justify-content: space-between;
+  /* height: 15vh; */
+  /* justify-content: space-between; */
   padding: 0 100px;
   margin-bottom: 0;
   border-bottom: 5px solid #bcaaa4;
@@ -42,12 +83,15 @@ header {
   flex-direction: row;
   border-radius: 10px;
   color: rgb(55, 53, 53);
+  font-size: 2.92rem;
+  /* background: #A39CCE; */
+
 }
 
 /* #video{
   display: block;
   border: black;
-  background: blue; */
+  background: blue;  */
 
 
   
@@ -55,30 +99,39 @@ header {
 .row1{
   float: right;
   border: black;
-  background-color: #caedf4;
+  /* background-color: #caedf4; */
+  height: 500px;
+  width: 45%;
+  flex-wrap: wrap;
+  text-align: justify;
+   content: attr(data-content); 
+  overflow: scroll;
+  background-image: url(https://i.ytimg.com/vi/VNXsOz0tjaY/maxresdefault.jpg);
+  -webkit-border-radius: 40px 40px 40px 40px;
+-moz-border-radius: 40px 40px 40px 40px;
+border-radius: 40px 40px 40px 40px;
+}
 
-  
+.row2 {
+  float: left;
+  /* display: block; */
+  border: black;
   height: 500px;
   width: 45%;
   flex-wrap: wrap;
   text-align: justify;
   content: attr(data-content);
   overflow: scroll;
+  -webkit-border-radius: 40px 40px 40px 40px;
+-moz-border-radius: 40px 40px 40px 40px;
+border-radius: 40px 40px 40px 40px;
+  
+
+  /* background-color: #caedf4; */
+
 }
-
-.row2 {
-  float: left;
-  display: block;
-  border: black;
-  height: 500px;
-  width: 50%;
-  flex-wrap: wrap;
-  text-align: justify;
-  content: attr(data-content);
-  overflow: scroll;
-
-  background-color: #caedf4;
-
+#videos{
+  color: aqua;
 }
 
 ul {
@@ -93,6 +146,21 @@ ul li {
 }
 
 footer {
-  color: #bcaaa4;
+  /* color: #bcaaa4;
   border-top: 5px solid #efebe9;
-}
+    background-color: #292c2f;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    width: 100%;
+    text-align: left;
+    font: normal 16px sans-serif; */
+    color: #616161;
+background: #292c2f;
+text-shadow: #e0e0e0 1px 1px 0;
+  } 
+  
+  
+  
+  
+  
+
