--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ text-decoration: underline solid rgb(68, 68, 68);
 font-style: italic;
 font-variant: normal;
 text-transform: none;
+text-shadow: 2px 0 0px #800040, 3px 2px 0px rgba(77,0,38,0.5), 3px 0 3px #FF002B, 5px 0 3px #800015, 6px 2px 3px rgba(77,0,13,0.5), 6px 0 9px #FF5500, 8px 0 9px #802A00, 9px 2px 9px rgba(77,25,0,0.5), 9px 0 18px #FFD500, 11px 0 18px #806A00, 12px 2px 18px rgba(77,66,0,0.5), 12px 0 30px #D4FF00, 14px 0 30px #6A8000, 15px 2px 30px rgba(64,77,0,0.5), 15px 0 45px #80FF00, 17px 0 45px #408000, 17px 2px 45px rgba(38,77,0,0.5), 2px 2px 2px rgba(129,159,88,0);
 }
 #save{
   background-color: #7BA487;
@@ -72,7 +73,10 @@ h3{
 
 header {
   margin-top: 0;
-  background: #caedf4;
+  background: #D8D582;
+background: -moz-radial-gradient(center, #D8D582 0%, #69A482 50%, #2E492E 100%);
+background: -webkit-radial-gradient(center, #D8D582 0%, #69A482 50%, #2E492E 100%);
+background: radial-gradient(ellipse at center, #D8D582 0%, #69A482 50%, #2E492E 100%);
   text-align: center;
   /* height: 15vh; */
   /* justify-content: space-between; */
@@ -132,6 +136,17 @@ border-radius: 40px 40px 40px 40px;
 }
 #videos{
   color: aqua;
+  font-family: Georgia, serif;
+font-size: 19px;
+letter-spacing: 2px;
+word-spacing: 2px;
+color: #000000;
+font-weight: 700;
+text-decoration: underline solid rgb(68, 68, 68);
+font-style: italic;
+font-variant: normal;
+text-transform: none;
+text-shadow: 2px 0 0px #800040, 3px 2px 0px rgba(77,0,38,0.5), 3px 0 3px #FF002B, 5px 0 3px #800015, 6px 2px 3px rgba(77,0,13,0.5), 6px 0 9px #FF5500, 8px 0 9px #802A00, 9px 2px 9px rgba(77,25,0,0.5), 9px 0 18px #FFD500, 11px 0 18px #806A00, 12px 2px 18px rgba(77,66,0,0.5), 12px 0 30px #D4FF00, 14px 0 30px #6A8000, 15px 2px 30px rgba(64,77,0,0.5), 15px 0 45px #80FF00, 17px 0 45px #408000, 17px 2px 45px rgba(38,77,0,0.5), 2px 2px 2px rgba(129,159,88,0);
 }
 
 ul {
